bynkc/tests/fixtures/positive/307_matches_js_lookbehind/input.bynk
commons demo {
  -- Lookbehind is legal ECMAScript (ES2018) but unsupported by Rust's
  -- `regex` crate; validating with JS semantics (#510) makes it compile.
  type Gerund = String where Matches("[a-z]+(?<=ing)")
}
